# MVis

./: CMakeLists.txt  MathFunctions.hpp  README.md  SimpleAI.hpp  color.hpp  extra_printers.hpp  main.cpp  test.cpp  utility.hpp
